plugins {
    id 'java'
}

group = 'camp.nextstep.edu'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'com.github.woowacourse-projects:mission-utils:1.2.0'
    testImplementation('org.junit.jupiter:junit-jupiter:5.7.0')
    testImplementation('org.assertj:assertj-core:3.18.1')
    testImplementation 'org.mockito:mockito-core:5.4.0' // 최신 버전으로 업데이트
}

test {
    useJUnitPlatform()
}
